archive/goldilocks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: observability
  labels:
    route.scope: external
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames:
    - goldilocks.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - name: goldilocks-dashboard
          port: 80
